# advent2022

./: Cargo.toml  advent2022-web-235af717fcc9cc99.js  advent2022-web-235af717fcc9cc99_bg.wasm  advent2022-web-4b62310a41f3db4c.js  advent2022-web-4b62310a41f3db4c_bg.wasm  advent2022-web-51d6a6deb9a7c95c.js  advent2022-web-51d6a6deb9a7c95c_bg.wasm  advent2022-web-58a2cd2726148d55.js  advent2022-web-58a2cd2726148d55_bg.wasm  advent2022-web-9ab8ac1f160c79d.js  advent2022-web-9ab8ac1f160c79d_bg.wasm  advent2022-web-a213cfbd577c289a.js  advent2022-web-a213cfbd577c289a_bg.wasm  advent2022-web-af2688ec2ac92020.js  advent2022-web-af2688ec2ac92020_bg.wasm  advent2022-web-b62fa2409a0d20a8.js  advent2022-web-b62fa2409a0d20a8_bg.wasm  advent2022-web-bf6dc33a935e4dec.js  advent2022-web-bf6dc33a935e4dec_bg.wasm  advent2022-web-dad6a749ef2887a2.js  advent2022-web-dad6a749ef2887a2_bg.wasm  advent2022-web-e50d11219d6b5395.js  advent2022-web-e50d11219d6b5395_bg.wasm  index.html  main-de6262befaa8adb0.css  release.sh  rust-toolchain.toml
advent2022-bin/: Cargo.toml
advent2022-bin/src/: main.rs
advent2022-lib/: Cargo.toml
advent2022-lib/benches/: benchmark_day00.rs
advent2022-lib/src/: day00_template.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  lib.rs  parser.rs  test.rs
advent2022-web/: Cargo.toml  index.html
advent2022-web/assets/css/: main.css
advent2022-web/src/: main.rs  web.rs
python/: day01.py
