[package]
name = "advent2022-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
cached = "0.40"
log = "0.4"
ndarray = "0.15"
pathfinding = "4"
recap = "0.1.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
criterion = "0.4"
env_logger = "0.10"
test-log = "0.2"

# [[bench]]
# name = "benchmark_day00"
# harness = false
